Bug 340314. Sound is played to random file descriptors, corrupting mailboxes, address books, cert DBs. Patch by Michael Wu <michael.wu@mozilla.com>. r+sr=roc